<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>eeutil-util-firma</artifactId>
  <version>6.8.2</version>
  <packaging>war</packaging>
  <parent>
    <groupId>es.gob.ad.gestdoc</groupId>
    <artifactId>eeutil-mvn-base</artifactId>
    <version>6.8.2</version>
  </parent>
  <properties>
    <jetty.port>10094</jetty.port>
    <tomcat.version>8.5.40</tomcat.version>
    <!-- mimeutil.version>2.1.3</mimeutil.version-->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <distributionManagement>
    <repository>
      <id>snapshots</id>
      <name>snapshots</name>
      <url>https://artefactos-ic.scae.redsara.es/nexus/repository/ad-maven-snapshot</url>
    </repository>
  </distributionManagement>
  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- APACHE -->
    <!-- dependencia por vulnerabilidad -->
    <dependency>
      <groupId>org.apache.santuario</groupId>
      <artifactId>xmlsec</artifactId>
      <version>2.2.3</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.woodstox</groupId>
          <artifactId>woodstox-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- UTILS -->
    <dependency>
      <groupId>net.glxn</groupId>
      <artifactId>qrgen</artifactId>
      <version>1.4</version>
    </dependency>
    <!-- APP -->
    <dependency>
      <groupId>es.gob.ad.gestdoc</groupId>
      <artifactId>eeutil-pdf-conversion</artifactId>
      <version>6.8.2</version>
      <exclusions>
        <exclusion>
          <groupId>org.ow2.asm</groupId>
          <artifactId>asm</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcprov-jdk15</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcmail-jdk15</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.ow2.asm</groupId>
          <artifactId>asm-debug-all</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>es.gob.ad.gestdoc</groupId>
      <artifactId>eeutil-comunes</artifactId>
      <version>6.8.2</version>
      <exclusions>
			</exclusions>
    </dependency>
    <dependency>
      <groupId>es.gob.ad.gestdoc</groupId>
      <artifactId>eeutil-schredule</artifactId>
      <version>6.8.2</version>
      <exclusions>
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
        <exclusion>
          <groupId>stax</groupId>
          <artifactId>stax-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- pdfoptmizer pdftools  -->
    <dependency>
      <groupId>com.pdfTools</groupId>
      <artifactId>pDFOptimizer-windows</artifactId>
      <version>4.8</version>
      <scope>provided</scope>
    </dependency>
    <!--RUNTIME JODCONVERTER-->
    <dependency>
      <groupId>org.openoffice</groupId>
      <artifactId>ridl</artifactId>
      <version>4.1.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.openoffice</groupId>
      <artifactId>juh</artifactId>
      <version>4.1.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.openoffice</groupId>
      <artifactId>jurt</artifactId>
      <version>4.1.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.openoffice</groupId>
      <artifactId>unoil</artifactId>
      <version>4.1.2</version>
      <scope>runtime</scope>
    </dependency>
    <!--FIN RUNTIME JODCONVERTER-->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    <!-- TEST -->
    <dependency>
      <groupId>org.jmockit</groupId>
      <artifactId>jmockit</artifactId>
      <version>1.34</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>eeutil-util-firma</finalName>
    <plugins>
      <!-- Se configura Jetty para que haga scan, use el contextPath estándar 
				y utilice como configuración la correspondiente al perfil seleccionado -->
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.1.4</version>
        <dependencies>
          <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
          <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs</artifactId>
            <version>4.1.4</version>
          </dependency>
        </dependencies>
      </plugin>
      <!-- WAR plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <webResources>
            <resource>
              <directory>${project.build.sourceDirectory}</directory>
              <targetPath>WEB-INF/classes</targetPath>
            </resource>
          </webResources>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.2</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <!-- attached to Maven test phase -->
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- escaneo de vulnerabilidades -->
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>6.5.0</version>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/pom.properties</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
        <excludes>
          <exclude>**/pom.properties</exclude>
        </excludes>
      </resource>
    </resources>
  </build>
  <profiles>
    <profile>
      <id>distribuible</id>
    </profile>
    <profile>
      <id>homovivus</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.48</version>
          <type>jar</type>
          <scope>runtime</scope>
        </dependency>
        <dependency>
          <groupId>com.pdfTools</groupId>
          <artifactId>pDFOptimizer-linux</artifactId>
          <version>4.8</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>redSara</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.oracle</groupId>
          <artifactId>ojdbc6</artifactId>
          <version>11.2.0.4</version>
          <type>jar</type>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>com.pdfTools</groupId>
          <artifactId>pDFOptimizer-linux</artifactId>
          <version>4.8</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>debug</id>
      <dependencies>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.48</version>
          <type>jar</type>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <version>1.9.0</version>
            <configuration>
              <container>
                <containerId>tomcat8x</containerId>
                <timeout>300000</timeout>
                <!-- 						<zipUrlInstaller> -->
                <!-- 							<url>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/8.5.40/tomcat-8.5.40.zip</url> -->
                <!-- 						</zipUrlInstaller> -->
                <artifactInstaller>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>tomcat</artifactId>
                  <version>${tomcat.version}</version>
                </artifactInstaller>
                <!-- 						  <systemProperties> -->
                <!--     						<eeutil-firma.config.path>XXXXX/local/firma</eeutil-firma.config.path> -->
                <!--     						<javax.net.ssl.trustStore>XXXXX/local/keystore/minhap.jks</javax.net.ssl.trustStore> -->
                <!--     						<javax.net.ssl.trustStorePassword>XXXXX</javax.net.ssl.trustStorePassword> -->
                <!--     						<local_home_app>XXXXX/local/firma</local_home_app> -->
                <!--     						<modulo>EEUTIL-FIRMA</modulo> -->
                <!--     						<logging.config>XXXXX/local/firma/log4j.properties</logging.config> -->
                <!--     						<java.awt.headless>true</java.awt.headless> -->
                <!--   						</systemProperties> -->
              </container>
              <configuration>
                <type>standalone</type>
                <home>${project.build.directory}/catalina-base</home>
                <properties>
                  <cargo.servlet.port>${jetty.port}</cargo.servlet.port>
                  <cargo.rmi.port>28207</cargo.rmi.port>
                  <cargo.tomcat.ajp.port>28011</cargo.tomcat.ajp.port>
                  <cargo.jvmargs>
										-Deeutil-util-firma.config.path="XXXXX/local/util-firma" 
										-Djavax.net.ssl.trustStore="XXXXX/local/keystore/minhap.jks" 
										-Djavax.net.ssl.trustStorePassword="XXXXX" 
										-Dlocal_home_app="XXXXX/local/util-firma"
										-Dtrazador-level="1"
										-Dtrazador-path="XXXXX/logs/trazabilidad/"
										-Dmodulo="EEUTIL-UTIL-FIRMA"
										-Xms1536m 
										-Xmx1536m 
										-XX:NewSize=256m 
										-XX:MaxNewSize=256m 
										-XX:PermSize=256m 
										-XX:MaxPermSize=256m 
										-XX:+DisableExplicitGC
										</cargo.jvmargs>
                  <!-- -Dcom.sun.management.jmxremote.port=46924 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false  -->
                </properties>
              </configuration>
              <deployables>
                <deployable>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <type>war</type>
                  <properties>
                    <context>/eeutil-util-firma</context>
                  </properties>
                </deployable>
              </deployables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>ddebug</id>
      <dependencies>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.48</version>
          <type>jar</type>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven3-plugin</artifactId>
            <version>1.9.0</version>
            <configuration>
              <container>
                <containerId>tomcat8x</containerId>
                <timeout>300000</timeout>
                <!-- 						<zipUrlInstaller> -->
                <!-- 							<url>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/8.5.40/tomcat-8.5.40.zip</url> -->
                <!-- 						</zipUrlInstaller> -->
                <artifactInstaller>
                  <groupId>org.apache.tomcat</groupId>
                  <artifactId>tomcat</artifactId>
                  <version>${tomcat.version}</version>
                </artifactInstaller>
                <!-- 						  <systemProperties> -->
                <!--     						<eeutil-firma.config.path>XXXXX/local/firma</eeutil-firma.config.path> -->
                <!--     						<javax.net.ssl.trustStore>XXXXX/local/keystore/minhap.jks</javax.net.ssl.trustStore> -->
                <!--     						<javax.net.ssl.trustStorePassword>XXXXX</javax.net.ssl.trustStorePassword> -->
                <!--     						<local_home_app>XXXXX/local/firma</local_home_app> -->
                <!--     						<modulo>EEUTIL-FIRMA</modulo> -->
                <!--     						<logging.config>XXXXX/local/firma/log4j.properties</logging.config> -->
                <!--     						<java.awt.headless>true</java.awt.headless> -->
                <!--   						</systemProperties> -->
              </container>
              <configuration>
                <type>standalone</type>
                <home>${project.build.directory}/catalina-base</home>
                <properties>
                  <cargo.servlet.port>${jetty.port}</cargo.servlet.port>
                  <cargo.rmi.port>28207</cargo.rmi.port>
                  <cargo.tomcat.ajp.port>28011</cargo.tomcat.ajp.port>
                  <cargo.jvmargs>
										-Deeutil-util-firma.config.path="XXXXX/local/util-firma" 
										-Djavax.net.ssl.trustStore="XXXXX/local/keystore/minhap.jks" 
										-Djavax.net.ssl.trustStorePassword="XXXXX" 
										-Dlocal_home_app="XXXXX/local/util-firma"
										-Dtrazador-level="1"
										-Dtrazador-path="XXXXX/logs/trazabilidad/"
										-Dmodulo="EEUTIL-UTIL-FIRMA"
										-Xms1536m 
										-Xmx1536m 
										-XX:NewSize=256m 
										-XX:MaxNewSize=256m 
										-XX:PermSize=256m 
										-XX:MaxPermSize=256m 
										-XX:+DisableExplicitGC
										-Xdebug
          								-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=29011
          								-Xnoagent
<!--          			          			-verbose:class						-->
										</cargo.jvmargs>
                  <!-- -Dcom.sun.management.jmxremote.port=46924 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false  -->
                </properties>
              </configuration>
              <deployables>
                <deployable>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <type>war</type>
                  <properties>
                    <context>/eeutil-util-firma</context>
                  </properties>
                </deployable>
              </deployables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>trazador</id>
      <dependencies>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjrt</artifactId>
        </dependency>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjweaver</artifactId>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>aspectj-maven-plugin</artifactId>
            <version>1.11</version>
            <configuration>
              <aspectLibraries>
                <aspectLibrary>
                  <groupId>es.mpt.inside</groupId>
                  <artifactId>trazadoreeutil</artifactId>
                </aspectLibrary>
              </aspectLibraries>
              <complianceLevel>1.8</complianceLevel>
              <source>1.8</source>
              <target>1.8</target>
              <showWeaveInfo>true</showWeaveInfo>
              <verbose>true</verbose>
              <Xlint>ignore</Xlint>
              <encoding>UTF-8 </encoding>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>compile</goal>
                  <!-- 									<goal>test-compile</goal> -->
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>trazaServExt</id>
      <dependencies>
        <dependency>
          <groupId>es.mpt.inside</groupId>
          <artifactId>eeutil-ext</artifactId>
          <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjrt</artifactId>
          <version>1.9.1</version>
          <scope>runtime</scope>
        </dependency>
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjweaver</artifactId>
          <version>1.9.1</version>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>aspectj-maven-plugin</artifactId>
            <version>1.11</version>
            <configuration>
              <aspectLibraries>
                <aspectLibrary>
                  <groupId>es.mpt.inside</groupId>
                  <artifactId>eeutil-ext</artifactId>
                </aspectLibrary>
              </aspectLibraries>
              <complianceLevel>1.8</complianceLevel>
              <source>1.8</source>
              <target>1.8</target>
              <showWeaveInfo>true</showWeaveInfo>
              <verbose>true</verbose>
              <Xlint>ignore</Xlint>
              <encoding>UTF-8 </encoding>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>compile</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <id>temporal</id>
      <name>gestdoc temporal</name>
      <url>https://artefactos-ic.scae.redsara.es/nexus/repository/ad-maven-temporal-gestdoc</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
